@@ -1,3 +1,7 @@
+2007-04-06  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.close_undodb): don't complain
+	if the undo file isn't here.
+
 2007-04-05  Don Allingham  <don@gramps-project.org>
 	* src/plugins/Checkpoint.py: fix some more Popen issues
 
